packages/survey-creator-core/src/components/question.scss
/* ... */
.svc-element__header--lazy,
.svc-element__header--hidden.sd-question__header--location--left {
  .svc-string-editor,
  sv-ng-string > .svc-string-editor {
    display: inline-block;
    &::before,
    &::after {
      content: none;
    }
  }
}

.svc-question__adorner {
  &.svc-question__adorner--collapsed {
    & > .svc-element__header--hidden {
      z-index: 1;
      & > .svc-element__title--hidden {
        opacity: var(--sjs2-opacity-visible);
      }
    }

    .svc-question__content--collapsed {
      & > .svc-question__dropdown-choices--wrapper,
      & > .svc-panel__placeholder_frame-wrapper,
      & > .svc-question__content-actions,
      & > .svc-panel__add-new-question-container,
      & > .svc-carry-forward-panel-wrapper,
      & > .svc-image-question-controls,
      & > .sd-file,
      & > sv-ng-file-question {
        display: none;
      }
      .svc-question__drop-indicator {
        display: block;
      }
      .svc-question__drag-area {
        display: flex;
      }
      .svc-content-wrapper {
        display: flex;
      }
      .sd-element {
        & > *:not(.sd-element__header) {
          display: none;
        }
      }

      .sd-element__header {
        & > *:not(.sd-element__title) {
          display: none;
        }
      }

      .sd-question__header--location--left {
        display: none;
      }
    }
  }

  .svc-question__content--collapsed {
    flex-grow: 0;
    padding-bottom: var(--sjs2-spacing-x400, 32px);
    padding-top: var(--sjs2-spacing-x400, 32px);

    .sd-element__header,
    .sd-element--complex > .sd-element__header {
      padding-top: 0;
      padding-bottom: 0;
    }
  }
}

.svc-creator--mobile {
  .svc-question__top-actions {
    padding: 0;
  }

  .svc-question__adorner {
    .svc-question__content--collapsed {
      padding-bottom: var(--sjs2-spacing-x200, 16px);
      padding-top: var(--sjs2-spacing-x200, 16px);

      &.svc-question__content--selected {
        padding-top: var(--sjs2-spacing-x300, 24px);
        padding-bottom: var(--sjs2-spacing-x300, 24px);
      }
    }
  }
}

.svc-question__drag-area {
  position: absolute;
  cursor: move;
  top: 0;
  left: 0;
  height: var(--sjs2-size-x350, 28px);
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  box-sizing: content-box;
}

.svc-question__drag-element {
  width: 100%;
  opacity: var(--sjs2-opacity-hidden);
  transition: opacity $creator-transition-duration;
  width: var(--sjs2-size-x300, 24px);
  height: var(--sjs2-size-x200, 16px);

  use {
    fill: var(--sjs2-color-fg-basic-secondary);
  }
}

.sd-panel {
  .svc-question__content--image:not(.svc-question__content--empty) {
    padding-left: var(--sjs2-border-width-x100, 1px);
    padding-right: var(--sjs2-border-width-x100, 1px);
  }

  .svc-question__content {
    .sd-table-wrapper::before {
      left: calc(calc(-1 * var(--sd-base-padding)) + var(--sjs2-border-width-x200, 2px));
    }

    .sd-table-wrapper::after {
      right: calc(calc(-1 * var(--sd-base-padding)) + var(--sjs2-border-width-x200, 2px));
    }
  }

  .svc-question__content {
    border-radius: 0;
    box-shadow: none;
    &::after {
      content: "";
      position: absolute;
      pointer-events: none;
      left: 0;
      top: 0;
      bottom: 0;
      right: 0;
      outline: var(--sjs2-border-width-x100) dashed var(--sjs2-color-border-basic-secondary);
      outline-offset: calc(-1 * var(--sjs2-border-width-x100));
      z-index: 10;
    }
  }

  .svc-hovered > .svc-question__content:not(.svc-question__content--dragged) {
    &::after {
      box-shadow: var(--sjs2-border-effect-surface-hovered) inset,
        0 0 0 var(--sjs2-border-width-x200, 2px) var(--sjs2-color-component-panel-default-bg, #ffffff) inset;
      outline: none;
    }
  }

  .svc-question__content.svc-question__content--selected:not(.svc-question__content--dragged) {
    &::after {
      box-shadow: 0px 0px 0px var(--sjs2-border-width-x200) var(--sjs2-color-utility-shadow-surface-focused) inset;
      outline: none;
    }
  }
}

.sd-panel .svc-row--ghost.svc-row--ghost .svc-question__content.svc-question__content {
  border: none;
}

.svc-widget__content {
  width: 100%;

  .sd-question__content {
    pointer-events: none;
  }
}

.svc-question__content {
  .sd-paneldynamic__footer,
  .sd-paneldynamic__separator {
    display: none;
  }
}

.svc-panel__placeholder_frame-wrapper {
  container-type: inline-size;
  width: 100%;
  display: flex;
  flex-grow: 1;
  box-sizing: border-box;
  position: relative;
}

.svc-question__content--empty-template {
  .sd-question--paneldynamic,
  .sd-question__content,
  sv-ng-paneldynamic-question,
  .sd-paneldynamic,
  .sd-paneldynamic__panels-container,
  .sd-paneldynamic__panel-wrapper,
  .svc-question__adorner,
  .svc-question__adorner > div {
    display: flex;
    flex-direction: column;
    flex-grow: 1;

    .svc-panel__placeholder_frame {
      flex-grow: 1;
    }
  }
}

.sd-paneldynamic__panels-container {
  padding-bottom: 2px;
  margin-bottom: -2px;
}

.svc-panel__placeholder_frame {
  border: var(--sjs2-border-width-x100, 1px) dashed var(--sjs2-color-border-basic-secondary);
  width: 100%;
  box-sizing: border-box;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  padding: var(--sjs2-spacing-x800, 64px) var(--sjs2-spacing-x800, 64px) var(--sjs2-spacing-x600, 48px)
    var(--sjs2-spacing-x800, 64px);
  flex-grow: 1;
}

.svc-panel__add-new-question-container {
  width: 100%;
  display: flex;
  justify-content: center;
  position: relative;
  margin-top: var(--sjs2-spacing-x050, 4px);
}

.svc-panel__question-type-selector {
  position: absolute;
  inset-inline-end: 0;
  bottom: 0;
  margin: 0;
}

@container (max-width: #{$sd-panel-normal-min-width}) {
  .svc-panel__placeholder_frame {
    padding: calc(var(--sjs2-base-unit-spacing) * 11) var(--sjs2-spacing-x300, 24px)
      calc(var(--sjs2-base-unit-spacing) * 10);
  }
}
/* ... */

